--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FizzBuzz Challenge</title>
+    <title>Sunset Hills Challenge</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -54,20 +54,22 @@
         <!-- Page Content -->
         <div class="content content-centered">
             <div class="container" id="content-container">
+                <hr />
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h1>Sunset Hill Challenge</h1>
                         <ul class="list-unstyled">
-                            <li>This page is for a description of the JavaScript exercise</li>
-                            <li>You should include information about what the code does</li>
+                            <li>Sunset Hills is a great array manipulation challenge. Given an array of values corresponding to building heights,</li>
+                            <li>which building can see the sunset?</li>
                         </ul>
                         <form action="/solve.html">
                             <button type="submit" class="custom-button">Go To Challenge >>></button>
                         </form>
                     </div>
                 </div>
-                
+                <hr />
             </div>
+            
             <div id="bottom-icons" class="container">
                 <div class="row text-center">
                     <div class="col">
