--- a/solve.html
+++ b/solve.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FizzBuzz Challenge</title>
+    <title>Sunset Hills Challenge</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -85,11 +85,11 @@
                 </div>
                 <div class="col">
                     <div class="buildings-container" id="buildings-container">
-                        <div style="height: 25%" class="building animate__bounceInDown"></div>
-                        <div style="height: 50%" class="building animate__bounceInDown"></div>
-                        <div style="height: 25%" class="building animate__bounceInDown"></div>
-                        <div style="height: 100%" class="building animate__bounceInDown"></div>
-                        <div style="height: 25%" class="building animate__bounceInDown"></div>
+                        <div style="height: 25%" class="building animate__bounceIn"></div>
+                        <div style="height: 50%" class="building animate__bounceIn"></div>
+                        <div style="height: 25%" class="building animate__bounceIn"></div>
+                        <div style="height: 100%" class="building animate__bounceIn"></div>
+                        <div style="height: 25%" class="building animate__bounceIn"></div>
                     </div>
                 </div>
             </div>
