--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="Content/style.css" rel="stylesheet" />
+    <link rel="icon" type="image/svg" href="/Images/sun.svg" />
 </head>
 
 <body>
@@ -38,13 +39,10 @@
                             <a class="nav-link" href="/Code.html">Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Git</a>
+                            <a class="nav-link" href="https://github.com/joshpters/SunsetHills">Git</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Blog Post/YouTube Explanation</a>
+                            <a class="nav-link" href="https://joshua-peters.netlify.app">Portfolio</a>
                         </li>
                     </ul>
                 </div>
@@ -57,7 +55,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h1>Sunset Hill Challenge</h1>
+                        <h1>Sunset Hills Challenge</h1>
                         <ul class="list-unstyled">
                             <li>Sunset Hills is a great array manipulation challenge. Given an array of values corresponding to building heights,</li>
                             <li>which building can see the sunset?</li>
