--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
                     <div class="col-lg-12 text-center">
                         <h1>Sunset Hills Challenge</h1>
                         <ul class="list-unstyled">
-                            <li>Sunset Hills is a great array manipulation challenge. Given an array of values corresponding to building heights,</li>
+                            <li>Sunset Hills is an array manipulation challenge. Given an array of values corresponding to building heights,</li>
                             <li>which building can see the sunset?</li>
+                            <br />
+                            <li>This project was created using Bootstrap 4.5, HTML5, CSS3, and JavaScript.</li>
+                            <li>All logic &amp; JavaScript DOM changes were hand coded.
+                            </li>
                         </ul>
                         <form action="/solve.html">
                             <button type="submit" class="custom-button">Go To Challenge >>></button>
