--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
                     <div class="col-lg-12 text-center">
                         <h1>Sunset Hills Challenge</h1>
                         <ul class="list-unstyled">
-                            <li>Sunset Hills is an array manipulation challenge. Given an array of values corresponding to building heights,</li>
-                            <li>which building can see the sunset?</li>
+                            <li>Sunset Hills is an array manipulation challenge: the sun is setting in the West, and from West to East the heights of each</li>
+                            <li>building is given in an integer array. Which of the buildings can see the sunset?</li>
+                            <br />
+                            <li>This challenge or a slight variation has been used by technology companies such as Amazon and was also</li>
+                            <li>featured on a Geeks for Geeks blog post titled “Amazon Interview Experience | Set 189 (For SDE-1)”</li>
                             <br />
                             <li>This project was created using Bootstrap 4.5, HTML5, CSS3, and JavaScript.</li>
-                            <li>All logic &amp; JavaScript DOM changes were hand coded.
+                            <li>All logic &amp; JavaScript DOM changes were custom coded for this project.
                             </li>
                         </ul>
                         <form action="/solve.html">
