--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="/Images/sun-favicon.png" />
     <link href="Content/style.css" rel="stylesheet" />
-    <link rel="icon" type="image/svg" href="/Images/sun.svg" />
 </head>
 
 <body>
