--- a/code.html
+++ b/code.html
@@ -51,7 +51,7 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="content">
+        <div class="content scrollable">
             <div class="container" id="content-container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -76,8 +76,7 @@
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="javascript" role="tabpanel" aria-labelledby="home-tab">
                                 <pre>
-<code class="language-js line-numbers">
-//sunset hills algorithm
+<code class="language-js line-numbers">//sunset hills algorithm
 function sunsetHills(buildingHeights) {
     let sunsetHillsOutput = new Array();
     let highestBuilding = 0;
@@ -99,14 +98,12 @@ function sunsetHills(buildingHeights) {
     //output will be an array of booleans
     return sunsetHillsOutput;
 }
-
 </code>
                                             </pre>
                             </div>
                             <div class="tab-pane fade" id="html" role="tabpanel" aria-labelledby="profile-tab">
 <pre>
-    <code class="language-html line-numbers">
-        &lt;div class="content content-centered"&gt;
+    <code class="language-html line-numbers">&lt;div class="content content-centered"&gt;
             &lt;div class="container full-height" id="content-container"&gt;
                 &lt;div class="row text-center"&gt;
                     &lt;div class="col"&gt;
@@ -152,8 +149,7 @@ function sunsetHills(buildingHeights) {
                             </div>
                             <div class="tab-pane fade" id="css" role="tabpanel" aria-labelledby="contact-tab">
 <pre>
-    <code class="language-css">
-.buildings-container {
+    <code class="language-css">.buildings-container {
     height:30rem;
     width: 100%;
     white-space: nowrap;
