Moved title outside of the horizontal rule

--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
         <!-- Page Content -->
         <div class="content content-centered">
             <div class="container" id="content-container">
+				<div class="row text-center">
+                    <div class="col">
+                        <h1>Sunset Hills Challenge</h1>
+                    </div>
+                </div>
                 <hr />
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h1>Sunset Hills Challenge</h1>
                         <ul class="list-unstyled">
                             <li>Sunset Hills is an array manipulation challenge: the sun is setting in the West, and from West to East the heights of each</li>
                             <li>building is given in an integer array. Which of the buildings can see the sunset?</li>
